ajout du workflows

--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,3 +4,13 @@ on:
   schedule:
     - cron: '10 * * * *'
 
+jobs:
+  say_hello: 
+    runs-on: ubuntu-latest
+
+    steps: 
+      - name: say hello
+        run:
+          echo "Hello world!" 
+
+
